<resources>
    <string name="app_name">ПДД Академия</string>
    <string name="settings_title">Настройки</string>
    <string name="appearance_title">Оформление</string>
    <string name="appearance_description">Выберите комфортную тему. Выбор сохранится для следующих занятий.</string>
    <string name="theme_system">Как на устройстве</string>
    <string name="theme_light">Светлая тема</string>
    <string name="theme_dark">Тёмная тема</string>
    <string name="done">Готово</string>
    <string name="ads_label">Реклама</string>
    <string name="ads_privacy_choices">Конфиденциальность рекламы</string>
    <string name="ads_consent_error">Не удалось загрузить параметры рекламы. Обучение доступно без интернета.</string>
    <string name="ads_retry">Повторить загрузку параметров</string>
</resources>
